# reshade-display-commander

./: .clang-format  .editorconfig  .gitignore  .gitmodules  BUILD_SCRIPTS.md  CHANGELOG.md  CMakeLists.txt  CONTINUE_RENDERING_ANALYSIS.md  FEATURE_PROPOSALS.md  INPUT_BLOCKING_APIS.md  KNOWN_BUGS.md  LIBRARY_DETECTION_IMPROVEMENTS.md  LICENSE  MODULE_LOADING_CALLBACK_DEMO.md  POWER_SAVING_ANALYSIS.md  README.md  SUPPORT.md  VERSION_BUMPING.md  bd.sh  bd32.ps1  build.sh  build32.sh  build_all_addons.ps1  build_d3d_debug_layer.ps1  build_display_commander.ps1  build_display_commander.sh  build_enhanced_injector.bat  build_enhanced_injector.sh  build_game_commander.ps1  build_game_commander.sh  bump_version.bat  bump_version.ps1  check_unused.ps1  fix_whitespace.ps1  fix_whitespace.sh  imgui.ini  nul~  reshade-display-commander.code-workspace  run_driver_restart_as_admin.bat  run_enhanced_injector.sh  (+8 more)
src/addons/d3d_debug_layer/: CMakeLists.txt  README.md  debug_layer.hpp  debug_manager.cpp  device_handler.cpp  event_handlers.hpp  main_entry.cpp  message_processor.cpp  present_handler.cpp
src/addons/display_commander/: CMakeLists.txt  addon.cpp  addon.hpp  background_window.cpp  background_window.hpp  continuous_monitoring.cpp  dbghelp_loader.cpp  dbghelp_loader.hpp  display_cache.cpp  display_cache.hpp  display_initial_state.cpp  display_initial_state.hpp  display_restore.cpp  display_restore.hpp  exit_handler.cpp  exit_handler.hpp  globals.cpp  globals.hpp  gpu_completion_monitoring.cpp  gpu_completion_monitoring.hpp  main_entry.cpp  performance_types.hpp  process_exit_hooks.cpp  process_exit_hooks.hpp  resolution_helpers.cpp  resolution_helpers.hpp  settings.hpp  shared.h  stack_trace.cpp  stack_trace.hpp  swapchain_events.cpp  swapchain_events.hpp  swapchain_events_power_saving.cpp  swapchain_events_power_saving.hpp  ui_settings.hpp  utils.cpp  utils.hpp  version.hpp
src/addons/display_commander/adhd_multi_monitor/: adhd_integration.cpp  adhd_integration.hpp  adhd_multi_monitor.cpp  adhd_multi_monitor.hpp  adhd_multi_monitor_module.cpp  adhd_multi_monitor_module.hpp  adhd_multi_monitor_simple.cpp  adhd_multi_monitor_simple.hpp  adhd_simple_api.cpp  adhd_simple_api.hpp  focus_detector.cpp  focus_detector.hpp
src/addons/display_commander/audio/: audio.hpp  audio_debug.cpp  audio_debug.hpp  audio_management.cpp  audio_management.hpp
src/addons/display_commander/autoclick/: autoclick_action.cpp  autoclick_action.hpp  autoclick_manager.cpp  autoclick_manager.hpp
src/addons/display_commander/background_tasks/: background_task_coordinator.cpp  background_task_coordinator.hpp
src/addons/display_commander/config/: display_commander_config.cpp  display_commander_config.hpp
src/addons/display_commander/display/: README_query_display.md  query_display.cpp  query_display.hpp
src/addons/display_commander/dlss/: dlss_indicator_manager.cpp  dlss_indicator_manager.hpp
src/addons/display_commander/dualsense/: dualsense_hid_wrapper.cpp  dualsense_hid_wrapper.hpp
src/addons/display_commander/dx11_proxy/: dx11_proxy_manager.cpp  dx11_proxy_manager.hpp  dx11_proxy_settings.cpp  dx11_proxy_settings.hpp  dx11_proxy_shared_resources.cpp  dx11_proxy_shared_resources.hpp  dx11_proxy_ui.cpp  dx11_proxy_ui.hpp
src/addons/display_commander/dxgi/: custom_fps_limiter.cpp  custom_fps_limiter.hpp  custom_fps_limiter_manager.cpp  custom_fps_limiter_manager.hpp  dxgi_device_info.cpp  dxgi_device_info.hpp  dxgi_management.cpp
src/addons/display_commander/hooks/: api_hooks.cpp  api_hooks.hpp  debug_output_hooks.cpp  debug_output_hooks.hpp  dinput_hooks.cpp  dinput_hooks.hpp  directinput_hooks.cpp  directinput_hooks.hpp  display_settings_hooks.cpp  display_settings_hooks.hpp  dualsense_hooks.cpp  dualsense_hooks.hpp  dxgi_factory_wrapper.cpp  dxgi_factory_wrapper.hpp  hid_additional_hooks.cpp  hid_additional_hooks.hpp  hid_hooks.cpp  hid_hooks.hpp  hid_statistics.cpp  hid_statistics.hpp  hid_suppression_hooks.cpp  hid_suppression_hooks.hpp  hook_suppression_manager.cpp  hook_suppression_manager.hpp  loadlibrary_hooks.cpp  loadlibrary_hooks.hpp  ngx_hooks.cpp  ngx_hooks.hpp  nvapi_hooks.cpp  nvapi_hooks.hpp  opengl_hooks.cpp  opengl_hooks.hpp  process_exit_hooks.cpp  process_exit_hooks.hpp  sleep_hooks.cpp  sleep_hooks.hpp  steam_controller_hooks.cpp  steam_controller_hooks.hpp  streamline_hooks.cpp  streamline_hooks.hpp  (+10 more)
src/addons/display_commander/input_blocking/: README.md  example_usage.cpp  input_blocking.cpp  input_blocking.hpp
src/addons/display_commander/input_remapping/: input_remapping.cpp  input_remapping.hpp
src/addons/display_commander/latency/: antilag2_provider.cpp  antilag2_provider.hpp  latency_manager.cpp  latency_manager.hpp  reflex_provider.cpp  reflex_provider.hpp
src/addons/display_commander/latent_sync/: README_vblank_monitor.md  latent_sync_limiter.cpp  latent_sync_limiter.hpp  latent_sync_manager.cpp  latent_sync_manager.hpp  refresh_rate_monitor.cpp  refresh_rate_monitor.hpp  refresh_rate_monitor_integration.cpp  refresh_rate_monitor_integration.hpp  vblank_monitor.cpp  vblank_monitor.hpp  vblank_monitor_example.cpp  vblank_monitor_integration.cpp
src/addons/display_commander/nvapi/: dlss_preset_detector.cpp  dlss_preset_detector.hpp  dlss_preset_manager.hpp  dlssfg_version_detector.cpp  dlssfg_version_detector.hpp  fake_nvapi_manager.cpp  fake_nvapi_manager.hpp  nvapi_dllfg_stats.cpp  nvapi_dllfg_stats.hpp  nvapi_fullscreen_prevention.cpp  nvapi_fullscreen_prevention.hpp  (+4 more)
src/addons/hide_hdr/: CMakeLists.txt  README.md  addon.cpp  addon.hpp  main_entry.cpp
src/addons/template_addon/: CMakeLists.txt  README.md  addon.cpp  addon.hpp  main_entry.cpp
tools/: CMakeLists.txt  README.md  enhanced_injector.cpp  injector_config.ini
tools/driver_restart/: CMakeLists.txt  README.md  driver_manager.cpp  driver_restart.h  main.cpp  process_manager.cpp  utils.cpp  window_manager.cpp
tools/game_commander/: CMakeLists.txt  api_detector.cpp  game_list.cpp  game_list.h  injector_service.cpp  injector_service.h  main.cpp  srwlock_wrapper.h  steam_api.cpp
(+295 files in other folders)
